--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -8,16 +8,29 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.tam.advancedtwitter.activities.TimelineActivity"
     tools:showIn="@layout/activity_timeline">
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="com.tam.advancedtwitter.fragments.HomeTimeLineFragment"
-        android:id="@+id/fragmentTimeline"
-        tools:layout="@layout/fragment_tweets_list"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    <!--<fragment-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:name="com.tam.advancedtwitter.fragments.HomeTimeLineFragment"-->
+        <!--android:id="@+id/fragmentTimeline"-->
+        <!--tools:layout="@layout/fragment_tweets_list"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true" />-->
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/tabsStrip"
+        app:pstsShouldExpand="true"
+        app:pstsTextAllCaps="true"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true" />
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_below="@+id/tabsStrip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white" />
 </RelativeLayout>
